New Crowdin updates (#740)
* New translations messages.json (Swedish)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Indonesian)

* New translations messages.json (Slovak)

* New translations messages.json (Russian)

* New translations messages.json (Spanish)

* New translations messages.json (Czech)

* New translations messages.json (Finnish)

* New translations messages.json (Japanese)

* New translations messages.json (Korean)

* New translations messages.json (Norwegian)

* New translations messages.json (Polish)

* New translations messages.json (German)

* New translations messages.json (Polish)

* New translations messages.json (Estonian)

* New translations messages.json (Chinese Traditional)

* New translations messages.json (Swedish)

* New translations messages.json (Chinese Traditional)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Indonesian)

* New translations messages.json (Estonian)

* New translations messages.json (Slovak)

* New translations messages.json (Russian)

* New translations messages.json (Spanish)

* New translations messages.json (Czech)

* New translations messages.json (German)

* New translations messages.json (Finnish)

* New translations messages.json (Korean)

* New translations messages.json (Norwegian)

* New translations messages.json (Polish)

* New translations messages.json (Italian)

* New translations messages.json (Russian)

* New translations messages.json (Finnish)

* New translations messages.json (Dutch)

* New translations messages.json (German)

* New translations messages.json (Indonesian)

* New translations messages.json (Korean)

* New translations messages.json (Slovak)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Czech)

* New translations messages.json (Estonian)

* New translations messa

--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -591,11 +591,23 @@
     "channelDataNotFound": {
         "message": "ID kanálu ještě nebylo načteno."
     },
-    "adblockerIssue": {
-        "message": "Zdá se, že něco blokuje schopnost rozšíření SponsorBlock získat data o videu. Bude to nejspíš váš adblocker. Podívejte se prosím na https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "youtubePermissionRequest": {
+        "message": "Vypadá to, že se SponsorBlock nemůže připojit k YouTube API. Pro opravení tohoto problému přijměte žádost o oprávnění, která se dále objeví, a poté znovu načtěte stránku."
+    },
+    "acceptPermission": {
+        "message": "Přijmout oprávnění"
+    },
+    "permissionRequestSuccess": {
+        "message": "Žádost o oprávnění byla úspěšná!"
+    },
+    "permissionRequestFailed": {
+        "message": "Žádost o oprávnění se nezdařila, neklikli jste na Odmítnout?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Pokud vám tento problém nepůjde vyřešit, vypněte nastavení 'Ignore unlisted/private videos', protože SponsorBlock nemůže zjistit, jestli je vaše video veřejné či nikoliv"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Pokud vám tento problém nepůjde vyřešit, vypněte nastavení 'Vynutit kontrolu kanálu před přeskočením', protože SponsorBlock nemůže zjistit informace o kanálu"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Pokud k tomu stále dochází, může to být způsobeno vaším adblockerem. Podívejte se prosím https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
