--- a/public/_locales/es/messages.json
+++ b/public/_locales/es/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "El segmento termina ahora"
     },
+    "sponsorCancel": {
+        "message": "Cancelar Creación de Segmento"
+    },
     "noVideoID": {
         "message": "No se encontró vídeo de YouTube.\nSi esto es incorrecto, actualice la pestaña."
     },
@@ -233,7 +236,7 @@
         "description": "The second line of the message displayed after the notice was upgraded."
     },
     "setSkipShortcut": {
-        "message": "Establecer clave para omitir un segmento"
+        "message": "Establecer tecla para omitir un segmento"
     },
     "setStartSponsorShortcut": {
         "message": "Establecer tecla para iniciar segmento"
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "ID de canal no cargado todavía."
     },
-    "adblockerIssue": {
-        "message": "Parece que algo está bloqueando la capacidad de SponsorBlock para obtener datos de vídeo. Este es probablemente su bloqueador de anuncios. Por favor, compruebe https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Parece que algo está bloqueando la capacidad de SponsorBlock para obtener datos de video, Por favor, vea https://github.com/ajayyy/SponsorBlock/issues/741 para más información."
+    },
+    "youtubePermissionRequest": {
+        "message": "Parece que SponsorBlock no puede acceder a la API de YouTube. Para solucionarlo, acepte el aviso de permiso que aparecerá a continuación, espera unos segundos y vuelve a cargar la página."
+    },
+    "acceptPermission": {
+        "message": "Aceptar permiso"
+    },
+    "permissionRequestSuccess": {
+        "message": "¡Petición de permiso realizada con éxito!"
+    },
+    "permissionRequestFailed": {
+        "message": "La petición de permiso ha fallado, ¿ha hecho clic en denegar?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Si no puedes resolver esto, desactiva la configuración 'Ignorar vídeos no listados/privados', porque SponsorBlock no puede recuperar la información de visibilidad de este vídeo"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Si no puede resolverlo, desactive la opción \"Forzar Comprobación de Canal antes de Saltar\", ya que SponsorBlock no puede recuperar la información del canal de este video"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Si esto sigue ocurriendo, podría ser causado por tu bloqueador de anuncios. Por favor, compruebe https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Solicitudes"
