--- a/public/_locales/no/messages.json
+++ b/public/_locales/no/messages.json
@@ -591,8 +591,17 @@
     "channelDataNotFound": {
         "message": "Kanal-ID-en er ikke lastet inn enda."
     },
-    "adblockerIssue": {
-        "message": "Det ser ut som noe blokkerer SponsorBlock sin evne til å innhente videodata. Det er sannsynligvis reklameblokkereren din. Vennligst sjekk https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "youtubePermissionRequest": {
+        "message": "Det ser ut til at SponsorBlock ikke klarer å nå YouTube-API-en. For å fikse dette, godta tillatelsesspørringen som dukker opp etter dette, vent noen sekunder, og så last inn siden på nytt."
+    },
+    "acceptPermission": {
+        "message": "Godta tillatelse"
+    },
+    "permissionRequestSuccess": {
+        "message": "Tillatelsesforespørselen lyktes!"
+    },
+    "permissionRequestFailed": {
+        "message": "Tillatelsesforespørselen mislyktes, klikket du på Avvis?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Hvis du ikke klarer å løse dette, skru av innstillingen «Ignorer uoppførte/private videoer», siden SponsorBlock er ute av stand til å innhente synlighetsinformasjonen til denne videoen."
