--- a/public/_locales/it/messages.json
+++ b/public/_locales/it/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Il Segmento Termina Ora"
     },
+    "sponsorCancel": {
+        "message": "Annulla Creazione del Segmento"
+    },
     "noVideoID": {
         "message": "Nessun video YouTube trovato.\nSe è un errore, ricarica la scheda."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "ID canale non ancora caricato."
     },
-    "adblockerIssue": {
-        "message": "Sembra che qualcosa stia bloccando la capacità di SponsorBlock di ottenere dati video. Questo probabilmente è il tuo ad blocker. Controlla https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Sembra che qualcosa stia bloccando l'abilità di SponsorBlock di ottenere i dati del video. Sei pregato di vedere https://github.com/ajayyy/SponsorBlock/issues/741 per ulteriori informazioni."
+    },
+    "youtubePermissionRequest": {
+        "message": "Sembra che SponsorBlock non sia in grado di raggiungere l'API di YouTube. Per risolverlo, accetta la richiesta di autorizzazione che comparirà in seguito, attendi qualche secondo, quindi ricarica la pagina."
+    },
+    "acceptPermission": {
+        "message": "Accetta autorizzazione"
+    },
+    "permissionRequestSuccess": {
+        "message": "Richiesta di autorizzazione riuscita!"
+    },
+    "permissionRequestFailed": {
+        "message": "Richiesta di assicurazione fallita, hai cliccato nega?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Se non riesci a risolvere questo problema, disabilita l'impostazione 'Ignora video non elencati/privati', poiché SponsorBlock non è in grado di recuperare le informazioni di visibilità di questo video"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Se non riesci a risolverlo, disabilita allora l'impostazione 'Forza Controllo Canale Prima di Saltare', poiché SponsorBlock non è in grado di recuperare le informazioni del canale per questo video"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Se questo continua a verificarsi, potrebbe essere causato dal tuo ad-blocker. Controlla https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
