--- a/public/_locales/ko/messages.json
+++ b/public/_locales/ko/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "광고 구간 끝"
     },
+    "sponsorCancel": {
+        "message": "구간 생성 취소"
+    },
     "noVideoID": {
         "message": "유튜브 동영상을 찾을 수 없습니다.\n오류라면, 탭을 새로고침해보세요."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "채널 ID가 로드되지 않았습니다."
     },
-    "adblockerIssue": {
-        "message": "무언가가 SponsorBlock의 영상 데이터 수집을 막고 있는 것으로 보입니다. 이것은 광고 차단기로 인해 그럴 가능성이 있습니다. https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests 사이트를 참조하세요"
+    "videoInfoFetchFailed": {
+        "message": "무언가가 SponsorBlock의 동영상 데이터 수집을 막고 있는 것 같습니다. https://github.com/ajayyy/SponsorBlock/issues/741 사이트를 참조하세요."
+    },
+    "youtubePermissionRequest": {
+        "message": "SponsorBlock이 YouTube API에 접근할 수 없는 것으로 보입니다. 이 문제를 해결하려면, 다음에 뜨는 권한 창에서 권한을 허용해주시고 잠시 기다린 뒤, 페이지를 새로고침하십시오."
+    },
+    "acceptPermission": {
+        "message": "권한 허용"
+    },
+    "permissionRequestSuccess": {
+        "message": "권한 요청에 성공했습니다!"
+    },
+    "permissionRequestFailed": {
+        "message": "권한 요청에 실패했습니다. 거부를 누르셨나요?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "이 문제를 해결할 수 없는 경우, SponsorBlock이 이 동영상에 대한 보이는 정보를 찾을 수 없으므로 '일부 공개/비공개 동영상 무시' 설정을 꺼주십시오."
+    },
+    "adblockerIssueWhitelist": {
+        "message": "이 문제를 해결할 수 없는 경우, SponsorBlock이 이 동영상에 대한 채널 정보를 찾을 수 없으므로 '건너뛰기 전 채널 강제 체크' 설정을 꺼주십시오."
     },
     "itCouldBeAdblockerIssue": {
         "message": "오류가 지속된다면, 광고 차단기로 인해 발생할 수 있습니다. https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests 사이트를 참조하세요"
