--- a/public/_locales/nl/messages.json
+++ b/public/_locales/nl/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Segment eindigt nu"
     },
+    "sponsorCancel": {
+        "message": "Segment aanmaken annuleren"
+    },
     "noVideoID": {
         "message": "Geen YouTube-video gevonden.\nVernieuw het tabblad als dit onjuist is."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "Kanaal-ID is nog niet geladen."
     },
-    "adblockerIssue": {
-        "message": "Het lijkt erop dat iets de mogelijkheid van SponsorBlock om videogegevens te krijgen blokkeert. Dit is waarschijnlijk uw reclamefilter. Zie https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocks-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Het lijkt erop dat iets de mogelijkheid van SponsorBlock om videogegevens op te halen, blokkeert. Zie https://github.com/ajayyy/SponsorBlock/issues/741 voor meer informatie."
+    },
+    "youtubePermissionRequest": {
+        "message": "Het lijkt erop dat SponsorBlock de YouTube API niet kan bereiken. Om dit op te lossen, accepteer het machtigingsverzoek dat hierna wordt weergegeven, wacht een aantal seconden en laad de pagina vervolgens opnieuw."
+    },
+    "acceptPermission": {
+        "message": "Machtiging accepteren"
+    },
+    "permissionRequestSuccess": {
+        "message": "Verzoek om machtiging gelukt!"
+    },
+    "permissionRequestFailed": {
+        "message": "Verzoek om machtiging mislukt. Heeft u op geweigerd geklikt?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Als u dit niet kunt oplossen, schakel dan de instelling 'onvermelde/privé-video's negeren' uit omdat SponsorBlock niet in staat is de zichtbaarheidsinformatie voor deze video op te halen"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Als u dit niet kunt oplossen, schakel dan de instelling 'kanaalcontrole forceren vóór overslaan' uit omdat SponsorBlock niet in staat is de kanaalinformatie voor deze video op te halen"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Als dit blijft optreden, kan dit worden veroorzaakt door uw reclamefilter. Zie https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
