--- a/public/_locales/pl/messages.json
+++ b/public/_locales/pl/messages.json
@@ -128,7 +128,7 @@
         "message": "Zgłoszenia"
     },
     "savedPeopleFrom": {
-        "message": "Oszczędzono innym "
+        "message": "Oszczędziłeś innym "
     },
     "viewLeaderboard": {
         "message": "Ranking"
@@ -594,8 +594,17 @@
     "channelDataNotFound": {
         "message": "ID kanału nie zostało póki co załadowane."
     },
-    "adblockerIssue": {
-        "message": "Wygląda na to, że coś blokuje możliwość pobierania danych o filmach przez SponsorBlock. To prawdopodobnie Twój ad blocker. Sprawdź proszę https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "youtubePermissionRequest": {
+        "message": "Wygląda na to, że SponsorBlock nie jest w stanie połączyć się z API YouTube. Aby to naprawić, zaakceptuj monit o pozwolenie, który pojawi się za chwilę, odczekaj kilka sekund, a następnie odśwież stronę."
+    },
+    "acceptPermission": {
+        "message": "Zaakceptuj uprawnienie"
+    },
+    "permissionRequestSuccess": {
+        "message": "Uzyskano uprawnienia!"
+    },
+    "permissionRequestFailed": {
+        "message": "Prośba odrzucona. Może kliknięto „Odmów”?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Jeżeli nie możesz naprawić tego to wyłącz w ustawieniach opcję \"Ignoruj prywatne filmy\", ponieważ SponsorBlock nie może uzyskać informacji o widoczności tego filmu"
