--- a/public/_locales/pt_BR/messages.json
+++ b/public/_locales/pt_BR/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "O segmento termina agora"
     },
+    "sponsorCancel": {
+        "message": "Cancelar Criação de Segmento"
+    },
     "noVideoID": {
         "message": "Nenhum vídeo do YouTube encontrado.\nSe isto estiver incorreto, atualize a aba."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "ID do canal ainda não carregado."
     },
-    "adblockerIssue": {
-        "message": "Parece que algo está bloqueando o SponsorBlock de obter dados de vídeo. Isso é provavelmente o seu bloqueador de anúncios. Por favor, verifique https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Parece que algo está bloqueando a habilidade do SponsorBlock de obter dados de vídeo. Por favor, veja https://github.com/ajayyy/SponsorBlock/issues/741 para mais informações."
+    },
+    "youtubePermissionRequest": {
+        "message": "Parece que o SponsorBlock é incapaz de acessar a API do YouTube. Para corrigir isso, aceite a permissão do prompt que aparecerá a seguir, espere alguns segundos e recarregue a página."
+    },
+    "acceptPermission": {
+        "message": "Aceitar permissão"
+    },
+    "permissionRequestSuccess": {
+        "message": "Solicitação de permissão bem-sucedida!"
+    },
+    "permissionRequestFailed": {
+        "message": "Falha na solicitação de permissão. Você clicou em negar?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Se você não consegue resolver isso, desative a configuração 'Ignorar vídeos não listados/privados', pois o SponsorBlock não pode recuperar as informações de visibilidade deste vídeo"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Se você não consegue resolver isso, desative a configuração 'Forçar Verificação do Canal Antes de Pular', pois o SponsorBlock não pode recuperar as informações deste vídeo"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Se isso continuar acontecendo, pode ser causado pelo seu bloqueador de anúncios. Por favor, verifique https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock-Requests"
