--- a/public/_locales/sk/messages.json
+++ b/public/_locales/sk/messages.json
@@ -591,23 +591,32 @@
     "channelDataNotFound": {
         "message": "ID kanála nie je zatiaľ načítané."
     },
-    "adblockerIssue": {
-        "message": "Zdá sa, že niečo blokuje SponsorBlocku možnosť získať dáta o videu. Pravdepodobne to bude Váš adblocker. Prosím navštívte https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "youtubePermissionRequest": {
+        "message": "SponsorBlock nemá prístup k YouTube API. Povoľte oprávnenie v nasledovnej výzve, počkajte pár sekúnd a znovu nahrajte stránku."
+    },
+    "acceptPermission": {
+        "message": "Povoľte oprávnenie"
+    },
+    "permissionRequestFailed": {
+        "message": "Povolenie oprávnenia zlyhalo, stlačili ste odmietnuť?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Ak to neviete vyriešiť, vypnite nastavenie \"Ignorovať nezaradené a súkromné videá\", lebo SponsorBlock nevie zistiť viditeľnosť tohto videa"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Ak to neviete vyriešiť, vypnite nastavenie \"Vynútiť kontrolu kanála pred preskočením\", lebo SponsorBlock nevie zistiť informácie o kanále tohto videa"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Ak sa to bude diať aj naďalej, môže to byť spôsobené Vašim adblockerom. Prosím navštívte https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
     },
     "forceChannelCheck": {
-        "message": "Vynútiť Kontrolu Kanála Pred Preskočením"
+        "message": "Vynútiť kontrolu kanála pred preskočením"
     },
     "whatForceChannelCheck": {
         "message": "V predvolenom nastavení sa preskočia segmenty hneď bez kontroly kanálu. V predvolenom nastavení môžu byť niektoré segmenty na začiatku videa na kanáloch pridaných na whitelist preskočené. Povolením tejto možnosti tomu zabránite, ale všetky preskakovania budú mať mierne oneskorenie, pretože získanie ID kanála môže chvíľu trvať. Toto oneskorenie nemusí byť viditeľné, ak máte rýchly internet."
     },
     "forceChannelCheckPopup": {
-        "message": "Zvážte Povolenie \"Vynútiť Kontrolu Kanála Pred Preskočením\""
+        "message": "Zvážte povolenie \"Vynútiť kontrolu kanála pred preskočením\""
     },
     "downvoteDescription": {
         "message": "Nesprávne/Zlé načasovanie"
