--- a/public/_locales/sv/messages.json
+++ b/public/_locales/sv/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Segmentet slutar nu"
     },
+    "sponsorCancel": {
+        "message": "Avbryt skapandet av segmentet"
+    },
     "noVideoID": {
         "message": "Hittade ingen YouTube-video.\nUppdatera fliken om detta är felaktigt."
     },
@@ -591,11 +594,26 @@
     "channelDataNotFound": {
         "message": "Kanal-ID är inte inladdat än."
     },
-    "adblockerIssue": {
-        "message": "Det verkar som om något blockerar SponsorBlocks från att hämta videodata. Det beror förmodligen på din annonsblockerare. Vänligen kontrollera https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
+    "videoInfoFetchFailed": {
+        "message": "Det verkar som om något blockerar SponsorBlock från att hämta videodata. Gå till https://github.com/ajayyy/SponsorBlock/issues/741 för mer info."
+    },
+    "youtubePermissionRequest": {
+        "message": "Det verkar som att SponsorBlock inte kan nå YouTube-API:t. För att åtgärda problemet ska du acceptera behörighetsfrågan som visas härnäst och vänta några sekunder och sedan ladda om sidan."
+    },
+    "acceptPermission": {
+        "message": "Godkänn behörighet"
+    },
+    "permissionRequestSuccess": {
+        "message": "Behörighet godkänd!"
+    },
+    "permissionRequestFailed": {
+        "message": "Behörighetsbegäran misslyckades, tryckte du på förneka?"
     },
     "adblockerIssueUnlistedVideosInfo": {
         "message": "Om du inte kan lösa detta kan du inaktivera 'Ignorera olistade/privata videor' i inställningar, eftersom SponsorBlock inte kan hämta synlighetsinformationen för den här videon"
+    },
+    "adblockerIssueWhitelist": {
+        "message": "Om du inte kan lösa detta kan du inaktivera 'Tvinga kontroll av kanalen innan hoppa över' i inställningarna, eftersom SponsorBlock inte kan hämta kanalinformationen för den här videon"
     },
     "itCouldBeAdblockerIssue": {
         "message": "Om detta fortsätter att inträffa, kan orsaken vara din annonsblockerare. Vänligen kontrollera https://github.com/ajayyy/SponsorBlock/wiki/Fix-Ad-Blocker-Blocking-SponsorBlock's-Requests"
