New Crowdin updates (#749)
* New translations messages.json (Italian)

* New translations messages.json (Swedish)

* New translations messages.json (Ukrainian)

* New translations messages.json (Chinese Simplified)

* New translations messages.json (Chinese Traditional)

* New translations messages.json (Vietnamese)

* New translations messages.json (Portuguese, Brazilian)

* New translations messages.json (Indonesian)

* New translations messages.json (Tamil)

* New translations messages.json (Estonian)

* New translations messages.json (Malay)

* New translations messages.json (Telugu)

* New translations messages.json (Malayalam)

* New translations messages.json (Slovak)

* New translations messages.json (Turkish)

* New translations messages.json (Hungarian)

* New translations messages.json (Russian)

* New translations messages.json (Romanian)

* New translations messages.json (French)

* New translations messages.json (Spanish)

* New translations messages.json (Czech)

* New translations messages.json (German)

* New translations messages.json (Finnish)

* New translations messages.json (Korean)

* New translations messages.json (Dutch)

* New translations messages.json (Norwegian)

* New translations messages.json (Polish)

--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -79,6 +79,9 @@
     "sponsorEnd": {
         "message": "Segment nyní končí"
     },
+    "sponsorCancel": {
+        "message": "Zrušit vytváření segmentu"
+    },
     "noVideoID": {
         "message": "Nebylo nalezeno žádné YouTube video.\nPokud je to špatně, obnovte záložku."
     },
@@ -407,15 +410,6 @@
     "areYouSureReset": {
         "message": "Jste si jisti, že toto chcete obnovit?"
     },
-    "confirmPrivacy": {
-        "message": "Toto video bylo zjištěno jako neuvedené. Klikněte na Zrušit, pokud nechcete kontrolovat pro přeskočitelné segmenty."
-    },
-    "unlistedCheck": {
-        "message": "Ignorovat neuvedená / soukromá videa"
-    },
-    "whatUnlistedCheck": {
-        "message": "Toto nastavení mírně zpomalí SponsorBlock. Přeskakování vyhledávání segmentů vyžaduje posílání ID videa serveru. Pokud vám vadí odesílání neuvedených videí přes internet, povolte tuto možnost."
-    },
     "mobileUpdateInfo": {
         "message": "m.youtube.com je nyní podporováno"
     },
@@ -591,6 +585,9 @@
     "channelDataNotFound": {
         "message": "ID kanálu ještě nebylo načteno."
     },
+    "videoInfoFetchFailed": {
+        "message": "Vypadá to, že něco blokuje schopnost SponsorBlocku získat údaje o videu. Pro více informací prosím navštivte https://github.com/ajayyy/SponsorBlock/issues/741."
+    },
     "youtubePermissionRequest": {
         "message": "Vypadá to, že se SponsorBlock nemůže připojit k YouTube API. Pro opravení tohoto problému přijměte žádost o oprávnění, která se dále objeví, a poté znovu načtěte stránku."
     },
@@ -602,9 +599,6 @@
     },
     "permissionRequestFailed": {
         "message": "Žádost o oprávnění se nezdařila, neklikli jste na Odmítnout?"
-    },
-    "adblockerIssueUnlistedVideosInfo": {
-        "message": "Pokud vám tento problém nepůjde vyřešit, vypněte nastavení 'Ignore unlisted/private videos', protože SponsorBlock nemůže zjistit, jestli je vaše video veřejné či nikoliv"
     },
     "adblockerIssueWhitelist": {
         "message": "Pokud vám tento problém nepůjde vyřešit, vypněte nastavení 'Vynutit kontrolu kanálu před přeskočením', protože SponsorBlock nemůže zjistit informace o kanálu"
