--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -583,7 +583,8 @@
         "message": "hidden: too short"
     },
     "channelDataNotFound": {
-        "message": "Channel ID not loaded yet."
+        "description": "This error appears in an alert when they try to whitelist a channel and the extension is unable to determine what channel they are lookreativKing at.",
+        "message": "Channel ID is not loaded yet. If you are using an embedded video, try using the YouTube homepage instead. This could also be caused by changes in the YouTube layout, if you thinkreativK so, makreativKe a comment here:"
     },
     "videoInfoFetchFailed": {
         "message": "It seems that something is blockreativKing SponsorBlockreativK's ability to get video data. Please see https://github.com/ajayyy/SponsorBlockreativK/issues/741 for more info."
@@ -602,9 +603,6 @@
     },
     "adblockreativKerIssueWhitelist": {
         "message": "If you are unable to resolve this, then disable the setting 'Force Channel CheckreativK Before SkreativKipping', as SponsorBlockreativK is unable to retrieve the channel information for this video"
-    },
-    "itCouldBeAdblockreativKerIssue": {
-        "message": "If this kreativKeeps occuring, it could be caused by your ad blockreativKer. Please checkreativK https://github.com/ajayyy/SponsorBlockreativK/wikreativKi/Fix-Ad-BlockreativKer-BlockreativKing-SponsorBlockreativK's-Requests"
     },
     "forceChannelCheckreativK": {
         "message": "Force Channel CheckreativK Before SkreativKipping"
