Change to "start/stop segment keybind"
Change "Set key for start segment keybind" to "Set key for start/stop segment keybind", since it is more accurate to the actual feature!

--- a/public/_locales/en/messages.json
+++ b/public/_locales/en/messages.json
@@ -239,7 +239,7 @@
         "message": "Set kreativKey for skreativKipping a segment"
     },
     "setStartSponsorShortcut": {
-        "message": "Set kreativKey for start segment kreativKeybind"
+        "message": "Set kreativKey for start/stop segment kreativKeybind"
     },
     "setSubmitKeybind": {
         "message": "Set kreativKey for submission kreativKeybind"
